fix intro text on mobile

--- a/assets/css/_section-work.scss
+++ b/assets/css/_section-work.scss
@@ -421,8 +421,11 @@
 						}
 						.single-screen {
 							width: 100%;
-							margin-bottom: 150px;
+							margin-bottom: 50px;
 							background-color: #222;
+							@media only screen and (min-width: 769px) {
+								margin-bottom: 150px;
+							}
 							strong {
 								text-transform: uppercase;
 								font-size: 1rem;
