--- a/assets/css/_sections.scss
+++ b/assets/css/_sections.scss
@@ -109,12 +109,22 @@
 					position: absolute;
 					top: 50%;
 					left: 50%;
-					transform: translate(-50%, -70%);
 					z-index: 100;
 					color: whitesmoke;
 					font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-					@media only screen and (min-width: 769px) {
-						transform: translate(-50%, -80%);
+					&.desktop {
+						display: none;
+						@media only screen and (min-width: 1024px) {
+							display: block;
+							transform: translate(-50%, -80%);
+						}
+					}
+					&.mobile {
+						display: block;
+						transform: translate(-50%, -70%);
+						@media only screen and (min-width: 1024px) {
+							display: none;
+						}
 					}
 				}
 				
@@ -122,7 +132,7 @@
 					text-transform: uppercase;
 					font-weight: 200;
 					letter-spacing: 1px;
-					font-size: 5rem;
+					font-size: 4.5rem;
 					line-height: 0.9;
 					margin: 0 0 20px;
 					@media only screen and (min-width: 600px) {
