--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,18 +365,26 @@ body.nav-open {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -70%);
         z-index: 100;
         color: whitesmoke;
         font-family: 'Montserrat', Helvetica, Arial, sans-serif; }
-        @media only screen and (min-width: 769px) {
-          .section.intro .container .top-canvas .top-text {
-            transform: translate(-50%, -80%); } }
+        .section.intro .container .top-canvas .top-text.desktop {
+          display: none; }
+          @media only screen and (min-width: 1024px) {
+            .section.intro .container .top-canvas .top-text.desktop {
+              display: block;
+              transform: translate(-50%, -80%); } }
+        .section.intro .container .top-canvas .top-text.mobile {
+          display: block;
+          transform: translate(-50%, -70%); }
+          @media only screen and (min-width: 1024px) {
+            .section.intro .container .top-canvas .top-text.mobile {
+              display: none; } }
       .section.intro .container .top-canvas .top-heading {
         text-transform: uppercase;
         font-weight: 200;
         letter-spacing: 1px;
-        font-size: 5rem;
+        font-size: 4.5rem;
         line-height: 0.9;
         margin: 0 0 20px; }
         @media only screen and (min-width: 600px) {
@@ -1004,8 +1012,11 @@ body.nav-open {
             margin: 0 auto; }
           .work-container .modal .case-study .main .content .screens .single-screen {
             width: 100%;
-            margin-bottom: 150px;
+            margin-bottom: 50px;
             background-color: #222; }
+            @media only screen and (min-width: 769px) {
+              .work-container .modal .case-study .main .content .screens .single-screen {
+                margin-bottom: 150px; } }
             .work-container .modal .case-study .main .content .screens .single-screen strong {
               text-transform: uppercase;
               font-size: 1rem;
